AB#46 feat: added hooking up splash with users